PAXURL-11 Add support for specifying snapshots/noreleases in repository urls.
git-svn-id: https://scm.ops4j.org/repos/ops4j/projects/pax/url@10484 9b982a3c-3ae5-0310-a4bc-d9a3335569bd