@@ -84,7 +84,7 @@ public class ParserTest
         assertEquals( "Version", "LATEST", parser.getVersion() );
         assertEquals( "Type", "jar", parser.getType() );
         assertEquals( "Artifact path", "group/artifact/LATEST/artifact-LATEST.jar", parser.getArtifactPath() );
-        assertEquals( "repository", new URL( "http://repository" ), parser.getRepositoryURL() );
+        assertEquals( "repository", new URL( "http://repository/" ), parser.getRepositoryURL().toURL() );
     }
 
     @Test
@@ -110,7 +110,7 @@ public class ParserTest
         assertEquals( "Version", "version", parser.getVersion() );
         assertEquals( "Type", "type", parser.getType() );
         assertEquals( "Artifact path", "group/artifact/version/artifact-version.type", parser.getArtifactPath() );
-        assertEquals( "repository", new URL( "http://repository" ), parser.getRepositoryURL() );
+        assertEquals( "repository", new URL( "http://repository/" ), parser.getRepositoryURL().toURL() );
     }
 
     @Test
@@ -132,7 +132,10 @@ public class ParserTest
     {
         Parser parser = new Parser( "jar:http://repository/repository.jar!/!group/artifact/0.1.0" );
         assertEquals( "Artifact path", "group/artifact/0.1.0/artifact-0.1.0.jar", parser.getArtifactPath() );
-        assertEquals( "repository", new URL( "jar:http://repository/repository.jar!/" ), parser.getRepositoryURL() );
+        assertEquals( "repository",
+                      new URL( "jar:http://repository/repository.jar!/" ),
+                      parser.getRepositoryURL().toURL()
+        );
     }
 
     @Test
